--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "start-server": "json-server --watch src/server/db.json --routes src/server/routes.json --middlewares src/server/middleware/conversations.js --port 3005",
     "test": "jest",
     "lint": "next lint"
-  },
+ },
   "engines": {
     "node": ">=16.15.0"
   },
   "dependencies": {
-    "next": "^12.1.6",
+    "@reduxjs/toolkit": "^1.8.3",
+    "moment": "^2.29.3",
+    "next": "^12.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sharp": "^0.30.5"
+    "react-redux": "^8.0.2",
+    "react-simple-timestamp-to-date": "^1.0.3",
+    "sharp": "^0.30.5",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
